# StupidOptimise

./: build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/eason/stupidoptimise/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  art_def.h  art_thread.cpp  art_thread.h  art_xdl.h  common.h  cpu_info.cpp  cpu_info.h  hacker.c  hacker.cpp  hookee.c  hookee.cpp  native-lib.cpp
app/src/main/java/com/eason/stupidoptimise/: App.kt  MainActivity.java
app/src/main/java/com/eason/stupidoptimise/activity/: HookActivity.java  MainActivity.java  NewMainActivity.kt
app/src/main/java/com/eason/stupidoptimise/cpuboost/: CpuBoostUtil.kt  CpuReadUtil.kt  NativeThread.java  ThreadCpuAffinityManager.java
app/src/main/java/com/eason/stupidoptimise/fragment/: MainFragment.kt
app/src/main/java/com/eason/stupidoptimise/hook/: NativeHacker.java  NativeHookee.java
app/src/main/java/com/eason/stupidoptimise/util/: StringUtil.java  ThreadUtil.kt
app/src/main/res/layout/: activity_hook.xml  activity_main.xml  activity_main_new.xml  fragment_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/eason/stupidoptimise/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hooklib/: CMakeLists.txt  build.gradle
hooklib/src/androidTest/java/com/eason/hooklib/: ExampleInstrumentedTest.kt
hooklib/src/main/: AndroidManifest.xml
hooklib/src/main/cpp/: CMakeLists.txt  hooklib.cpp
hooklib/src/main/java/com/eason/hooklib/: NativeLib.kt
hooklib/src/main/java/com/eason/hooklib/manager/: GcManager.kt
hooklib/src/test/java/com/eason/hooklib/: ExampleUnitTest.kt
